# repo-tasks

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  REQUIREMENTS.md  test-hook.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.repo-tasks/: config.json
.repo-tasks/tasks/done/: 20260109120001-create-cross-platform-release-builds.md  20260109120002-publish-to-crates-io.md  20260109120003-create-homebrew-formula.md  20260109120005-add-license-file.md  20260109231636-fix-ci-failures-on-github-actions.md  20260109231855-cli-non-interactive-task-creation.md  20260110141320-evaluate-cargo-dist-for-release-automation.md  20260110141322-generate-and-verify-release-checksums.md  20260110142106-create-commit-message-parser.md  20260110142106-implement-post-commit-hook-for-status-automation.md  20260110142107-implement-pre-commit-hook-with-validation.md  20260110142109-implement-post-checkout-hook.md  (+15 more)
Formula/: README.md  repo-tasks.rb
benches/: task_operations.rs
docs/: cargo-dist-evaluation.md  homebrew-tap-setup.md
mcp-server/: .gitignore  CHANGELOG.md  README.md  package.json
mcp-server/src/: check-binary.ts  index.ts
scripts/: README.md  verify-release.sh
src/: lib.rs  main.rs
src/commands/: hooks.rs  init.rs  list.rs  mod.rs  move_task.rs  new.rs  open.rs  save.rs  search.rs  show.rs  start.rs  update.rs
src/hooks/: mod.rs  parser.rs
src/models/: config.rs  mod.rs  task.rs
src/utils/: errors.rs  mod.rs  output.rs
tests/: integration_tests.rs
(+21 files in other folders)
