[package]
name = "repo-tasks"
version = "0.1.0"
edition = "2021"
authors = ["Clay Diffrient"]
description = "Fast task management for git repositories"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# File system
walkdir = "2.4"

# Terminal UI
dialoguer = "0.11"
console = "0.15"
atty = "0.2"

# Date/Time for ID generation
chrono = "0.4"

# String manipulation
slug = "0.1"

# Search
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"

# Git integration
git2 = { version = "0.19", features = ["vendored-openssl"] }

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "task_operations"
harness = false

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols
panic = 'abort'        # Smaller binary
